--- a/style.css
+++ b/style.css
@@ -332,8 +332,8 @@ html, body{
 
 .float-comment{
     position: absolute;
-    width: 180px;
-    height: 50px;
+    width: 11vw;
+    height: 3vw;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
